Arreglo de makefiles, carga según parámetros

--- a/cordic/makefile
+++ b/cordic/makefile
@@ -1,5 +1,7 @@
 all:
 	g++ mostrar.cpp -o mostrar.exe -lmingw32 -lSDL2main -lSDL2 -O2
+	#Para compilar en Linux, sacar la biblioteca mingw32
 	
+.PHONY: run	
 run:
-	./mostrar
+	./mostrar coordenadas.txt
